--- a/my posts.html
+++ b/my posts.html
@@ -1622,9 +1622,12 @@
               </path>
             </svg></div>
         </div>
-        <div class="Profile_tabContainer__TOvXk"><button class="Profile_activeTab__56gsN">My Posts</button>
-          <a href="index.html"><button class="Profile_tabButton__OZirG">Posts for me</button></a><button class="Profile_tabButton__OZirG">My
-            Snapshots</button><button class="Profile_tabButton__OZirG">Tagged Snapshots</button></div>
+        <div class="Profile_tabContainer__TOvXk">
+          <a class="Profile_tabButton__OZirG" href="./my posts.html"><button >My Posts</button></a>
+          <a class="Profile_tabButton__OZirG" href="index.html"><button >Posts for me</button></a>
+          <a class="Profile_tabButton__OZirG" href="./posts_by_manasi.html"><button >Posts by Manasi</button></a>
+          <a class="Profile_tabButton__OZirG" href="./posts_for_manasi.html"><button>Posts for Manasi</button></a>
+        </div>
         <div class="Profile_tabContent__f6wd3">
           <div class="Feed_ChildContainer__LtTS-">
             <div class="FeedContainerPosts_FeedContainer__ZBWrb">
